Фикс добавления кредитов
